--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+td {
+  border: 1px solid #dddddd;
+  background-color: red;
+  padding: 8px;
+}
+
+table {
+  width: 100%;
+}
+
+p {
+  font-size: 14px;
+}
